# lighthouse

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
.agent/: CONTINUITY.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: config.example.toml
assets/systemd/: lighthouse.service
docs/: ARCHITECTURE.md  SPEC.md
docs/adr/: README.md
scripts/: install-openrgb-headless.sh  test_openrgb.py  uninstall.sh
src/: main.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/effects/: mod.rs  profile.rs  schedule.rs
src/metrics/: mod.rs
src/mqtt/: mod.rs
src/openrgb/: mod.rs
src/test_mode/: mod.rs
src/tui/: app.rs  daemon.rs  events.rs  mod.rs  theme.rs  ui.rs
