[package]
name = "lighthouse"
version = "0.1.0"
edition = "2024"
description = "A lightweight Rust daemon and TUI that maps system telemetry to OpenRGB lighting"
license = "MIT"
authors = ["Your Name <you@example.com>"]
repository = "https://github.com/yourusername/lighthouse"
rust-version = "1.85"

[[bin]]
name = "lighthouse"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-journald = "0.3"
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.34"
thiserror = "2.0"
anyhow = "1.0"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.19"

[profile.release]
opt-level = 3
lto = true
strip = true
